packages/tdb-dashboard/src/App.css
/* ... */
/* ---------- sub nav css ----------- */

.cancel-button {
  border: 0px !important;
  float: right;
}

/* ---------- custom active css ---------- */
.list-group-item.active {
  color: #00C08B !important;
  font-weight: bold !important;
}

.list-group-item:hover {
  color: #00C08B !important;
}



/*.nav-icon .nav-link .active {
  color: white;
  background-color:transparent;
}*/
/* ---------- custom active css ---------- */


/* ---------- overriding react components schema builder css ---------- */
.schema-summary-icons {
  color: #E3EBF6;
  font-size: 24px;
}

.doc-summary-card {
  min-width: "33.333333%"
}

.RRT__tab {
  background: transparent !important;
  border-style: solid;
  border-color: transparent !important;
}

.RRT__showmore{
  background: transparent;
  border-style: none;
}

.RRT__showmore-label--selected {
  background: black !important;
  color:white;
}
.RRT__showmore-list--opened{
  background: black !important;
  color:white;
  border-radius: 4px;
}

.tdb__panel__bar, .tdb__panel__title {
  background: transparent !important;
}

/* accordian */
.accordion-button {	
  background: transparent !important;	
  color: #fff !important;	
  border-radius: 2px !important;
  border-color: #444;	
}

.accordion-item {
  border: 1px solid #444;	
}

.accordion-button:hover{	
  background-color: #414141 !important;	
  color: #f8f9fa !important;	
}

.diff__accordian {
  background: transparent !important;	
}

/*
.accordion__button {
  background-color: transparent !important;
  color: #cae4fd !important;
  padding: 12px !important;
  border-radius: 4px !important;
}


.accordion-item:last-of-type .accordion-button.collapsed, .accordion-button.collapsed{
  color: #adb5bd;
}

.accordion__button:hover{
  background-color: #414141 !important;
  color: #cae4fd !important;

}*/

/* ---------- overriding react components schema builder css ---------- */


/* ---------- form control custom dark mode ---------- */
.form-control {
  color: #adb5bd !important;
  /*background-color: #444 !important;*/
  background-color: transparent !important;
  border-color: rgb(102, 102, 102) !important;
  min-height: 49px !important;
}

/* ---------- form control custom dark mode ---------- */
.form-select-light {
  color: #adb5bd !important;
  /*background-color: #444 !important;*/
  background-color: transparent !important;
  border-color: rgb(102, 102, 102) !important;
  min-height: 49px !important;
}



.form-control:disabled:hover, .form-control[readonly]:hover{
  cursor: not-allowed;
}

tbody, td, tfoot, th, thead, tr {
  border-style: solid !important;
  border-bottom: 1px solid #444 !important;
}


.form-select {
  mix-blend-mode: difference;
  border: 1px solid #adb5bd;
}

.css-yk16xz-control,  .css-1960ht7-control {
  background-color: #303030 !important;
  border-color: rgb(102, 102, 102) !important;
}

.css-1uccc91-singleValue {
  color: #adb5bd !important;
}

.css-g1d714-ValueContainer {
  background-color: #303030 !important;
}

.css-26l3qy-menu, .css-1ektx4i-menu {
  background-color: #303030 !important;
  border: rgb(102, 102, 102) 1px solid !important;
  box-shadow: 0px 0px 0px !important;
  color: #dcdfe2 !important;
}

.css-26l3qy-menu:hover {
  background-color: #303030 !important;
  color: #adb5bd !important;
}

.css-xb97g8 {
  color: #adb5bd !important;
}

.css-xb97g8:hover {
  color: red !important;
  cursor: pointer;
}

.custom-field-check {
  background-image: none !important;
}

.custom-select {
  color: #adb5bd !important;
  background-color: transparent !important;
  border-color: rgb(102, 102, 102) !important;
}

.custom-field-select-no-validation {
  background-image: none !important;
}
 
/*
.css-1gtuorj-indicatorContainer {
  background-color: #303030 !important;
}*/

input {
  border-color: hsl(0,0%,80%)!important;
  border-radius: 4px !important;
  border-style: solid !important;
  /*background-color: #303030 !important;*/
  min-height: 38px !important;
  color: hsl(0,0%,50%) !important;
}

input[type="radio"] {
  border-radius: 50% !important;
  margin-top: 5px !important;
}

.search-input {
  font-size: 13px !important;
}
/* ---------- form control custom dark mode ---------- */


.click-list:hover, .traverseDocument:hover {
  cursor: pointer;
}

/* ---------- custom modal dimensions ---------- */
.modal-dialog-centered {
  min-width: calc(100% - 45rem);
  min-height: calc(100% - 45rem);
}
/* ---------- custom modal dimensions ---------- */

/* ---------- custom react icons dimensions ---------- */
.react-icons {
  font-size: 25px;
}

.react-icons:hover {
  cursor: pointer;
}

.danger {
  color: #e74c3c;
}

.info {
  color: #2a7aaf;
}
/* ---------- custom react icons dimensions ---------- */


/* ---------- time travel widget ---------- */
.time-travel-control {
  /*top: 10;
  right: 0;
  margin-top: 80px;
  position: fixed !important;*/
  z-index: 999;
  box-shadow: 0 0.5rem 1rem rgb(46 54 80 / 15%);
}

::-webkit-scrollbar {
  width: 3px;
  /*background: transparent;*/
  background: #111;
  border: 1px solid rgb(0, 0, 0);
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  -webkit-border-radius: 3px; 
  -moz-border-radius: 3px; 
  border-radius: 3px;
}
::-webkit-scrollbar-thumb
{
	border-radius: 4px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
  box-shadow:inset 0 0 6px rgba(0,0,0,.3);
	background-color: #444;
  /*max-height: 25%;*/
  /*background-color: #855afc;*/
  height: 15%;
}



.time-travel-control {
  transition: 1s;
}

.time-travel-control:hover {
  cursor: pointer;

}


.time-travel-card {
  margin-top: -2.5rem;
}

.time-travel-icon:hover {
  transition: all .2s ease-in-out !important;
  cursor: pointer;
}

.time-travel-slider {
  height: 100%;
  background: #303030;
  position: fixed;
  top: 0;
  right: 0;
  width: 40%;
  z-index: 200;
  box-shadow: 1px 0px 7px rgba(0,0,0,0.5);
  transform: translateX(100%);
  transition: transform 0.3s ease-out;
}
.time-travel-slider.open {
  transform: translateX(0);
}
/* ... */

